# timeCanvas

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: feedback-2026-07-07.md  release-process.md  requirements.md  ui-design.md  wip-2026-07-04.md
scripts/: tauri-cli.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  main.rs  notes.rs
src/components/: ConfirmDialog.tsx  NavRail.tsx  SettingsDialog.tsx  Toolbar.tsx  icons.tsx
src/components/analytics/: AnalyticsView.tsx  HourDowChart.tsx  StackedBarChart.tsx
src/components/calendar/: DayView.tsx  EntryBlock.tsx  EntryContextMenu.tsx  EntryDialog.tsx  MonthView.tsx  QuickCreatePopover.tsx  TicketCombobox.tsx  WeekView.tsx
src/components/history/: HistoryHeatmap.tsx  HistoryView.tsx
src/db/: backupService.ts  categoryRepo.ts  database.ts  devSeed.ts  entryRepo.ts  notesService.ts  settingsRepo.ts  taskRepo.ts  ticketGroupRepo.ts
src/lib/: analytics.test.ts  analytics.ts  colors.test.ts  colors.ts  dates.test.ts  dates.ts  export.test.ts  export.ts  gantt.test.ts  gantt.ts  gridGeometry.ts  history.test.ts  history.ts  layout.test.ts  layout.ts  searchQuery.test.ts  searchQuery.ts  status.test.ts  status.ts  summary.test.ts  summary.ts  tickets.test.ts  tickets.ts  useTicketOptions.ts
src/store/: appStore.ts  confirmStore.ts
(+13 files in other folders)
