[package]
name = "timecanvas"
version = "0.1.0"
description = "Private local time tracking app"
authors = ["kazuma"]
license = "BSD-3-Clause"
edition = "2021"

[lib]
name = "timecanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
